--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonp": "^0.2.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vuewordcloud": "^18.7.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-svg-inline-loader": "^1.2.12",
     "vue-template-compiler": "^2.5.21"
   },
   "browserslist": [
