--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "jsonp": "^0.2.1",
     "vue": "^2.6.6",
+    "vue-multianalytics": "^1.11.2",
     "vue-router": "^3.0.1",
     "vuewordcloud": "^18.7.11",
     "vuex": "^3.0.1"
