--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vue": "^2.6.6",
     "vue-multianalytics": "^1.11.2",
     "vue-router": "^3.0.1",
-    "vuewordcloud": "^18.7.11",
+    "vue-wordcloud": "^1.1.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
